force-app/main/default/objects/SystemConfiguration__mdt/SystemConfiguration__mdt.object-meta.xml
<CustomObject>
    <description>Metadata to store Object level settings</description>
    <label>System Configuration</label>
    <pluralLabel>System Configurations</pluralLabel>
</CustomObject>