force-app/main/default/objects/SystemConfiguration__mdt/fields/IsRunAfterDelete__c.field-meta.xml
<CustomField>
    <fullName>IsRunAfterDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be checked when a trigger has to be executed after deleting</description>
    <inlineHelpText>To be checked when a trigger has to be executed after deleting</inlineHelpText>
    <label>Is Run After Delete</label>
    <type>Checkbox</type>
</CustomField>