force-app/main/default/objects/SystemConfiguration__mdt/fields/IsRunAfterInsert__c.field-meta.xml
<CustomField>
    <fullName>IsRunAfterInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be checked when a trigger has to be executed after inserting</description>
    <inlineHelpText>To be checked when a trigger has to be executed after inserting</inlineHelpText>
    <label>Is Run After Insert</label>
    <type>Checkbox</type>
</CustomField>