force-app/main/default/objects/SystemConfiguration__mdt/fields/IsRunAfterUpdate__c.field-meta.xml
<CustomField>
    <fullName>IsRunAfterUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be checked when a trigger has to be executed after update</description>
    <inlineHelpText>To be checked when a trigger has to be executed after update</inlineHelpText>
    <label>Is Run After Update</label>
    <type>Checkbox</type>
</CustomField>