force-app/main/default/objects/SystemConfiguration__mdt/fields/IsRunBeforeDelete__c.field-meta.xml
<CustomField>
    <fullName>IsRunBeforeDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be checked when a trigger has to be executed before delete</description>
    <inlineHelpText>To be checked when a trigger has to be executed before delete</inlineHelpText>
    <label>Is Run Before Delete</label>
    <type>Checkbox</type>
</CustomField>