force-app/main/default/objects/SystemConfiguration__mdt/fields/IsRunBeforeInsert__c.field-meta.xml
<CustomField>
    <fullName>IsRunBeforeInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be checked when a trigger has to be executed before inserting</description>
    <inlineHelpText>To be checked when a trigger has to be executed before inserting</inlineHelpText>
    <label>Is Run Before Insert</label>
    <type>Checkbox</type>
</CustomField>