force-app/main/default/objects/SystemConfiguration__mdt/fields/IsRunBeforeUpdate__c.field-meta.xml
<CustomField>
    <fullName>IsRunBeforeUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be checked when a trigger has to be executed before update</description>
    <inlineHelpText>To be checked when a trigger has to be executed before update</inlineHelpText>
    <label>Is Run Before Update</label>
    <type>Checkbox</type>
</CustomField>