force-app/main/default/objects/SystemConfiguration__mdt/fields/IsRunTrigger__c.field-meta.xml
<CustomField>
    <fullName>IsRunTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field is to capture whether the object trigger has to be executed or not</description>
    <inlineHelpText>Field is to capture whether the object trigger has to be executed or not</inlineHelpText>
    <label>Is Run Trigger</label>
    <type>Checkbox</type>
</CustomField>